Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.0.0
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:
-
Platform/s:
-
Commits:7f74a613f83f35fc5204857868378ed404628e46 (qt/qtdeclarative/dev)
Description
https://codereview.qt-project.org/c/qt/qt5/+/301667 Add a Windows 10 developer build
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1590400107
agent:2020/05/25 11:10:43 build.go:253: PASS : tst_qqmlproperty::nullPropertyBinding()
agent:2020/05/25 11:10:44 build.go:253: A crash occurred in C:\Users\qt\work\qt\qtdeclarative\tests\auto\qml\qqmlproperty\release\tst_qqmlproperty.exe.
agent:2020/05/25 11:10:44 build.go:253: Function time: 50ms Total time: 610ms
agent:2020/05/25 11:10:44 build.go:253: Exception address: 0x00007FF8EB091205
agent:2020/05/25 11:10:44 build.go:253: Exception code : 0xc0000005
agent:2020/05/25 11:10:44 build.go:253: Nearby symbol : QObject::property
agent:2020/05/25 11:10:44 build.go:253: Stack:
agent:2020/05/25 11:10:44 build.go:253: # 1: QTest::toString() - 0x00007FF90400AFC0
agent:2020/05/25 11:10:44 build.go:253: # 2: UnhandledExceptionFilter() - 0x00007FF91040F490
agent:2020/05/25 11:10:44 build.go:253: # 3: memset() - 0x00007FF913282FC0
agent:2020/05/25 11:10:44 build.go:253: # 4: _C_specific_handler() - 0x00007FF91326C640
agent:2020/05/25 11:10:44 build.go:253: # 5: _chkstk() - 0x00007FF9132810E0
agent:2020/05/25 11:10:44 build.go:253: # 6: RtlRaiseException() - 0x00007FF913249EF0
agent:2020/05/25 11:10:44 build.go:253: # 7: KiUserExceptionDispatcher() - 0x00007FF91327FE40
agent:2020/05/25 11:10:44 build.go:253: # 8: QObject::property() - 0x00007FF8EB0911E0
agent:2020/05/25 11:10:44 build.go:253: # 9: Unable to obtain symbol
agent:2020/05/25 11:10:44 build.go:253: # 10: Unable to obtain symbol
agent:2020/05/25 11:10:44 build.go:253: # 11: QQmlObjectCreator::setPropertyBinding() - 0x00007FF8EBEC2F10
agent:2020/05/25 11:10:44 build.go:253: # 12: QQmlObjectCreator::setupBindings() - 0x00007FF8EBEC5780
agent:2020/05/25 11:10:44 build.go:253: # 13: QQmlObjectCreator::populateInstance() - 0x00007FF8EBEC1440
agent:2020/05/25 11:10:44 build.go:253: # 14: QQmlObjectCreator::createInstance() - 0x00007FF8EBEBF220
agent:2020/05/25 11:10:44 build.go:253: # 15: QQmlObjectCreator::setPropertyBinding() - 0x00007FF8EBEC2F10
agent:2020/05/25 11:10:44 build.go:253: # 16: QQmlObjectCreator::setupBindings() - 0x00007FF8EBEC5780
agent:2020/05/25 11:10:44 build.go:253: # 17: QQmlObjectCreator::populateInstance() - 0x00007FF8EBEC1440
agent:2020/05/25 11:10:44 build.go:253: # 18: QQmlObjectCreator::createInstance() - 0x00007FF8EBEBF220
agent:2020/05/25 11:10:44 build.go:253: # 19: QQmlObjectCreator::create() - 0x00007FF8EBEBED30
agent:2020/05/25 11:10:44 build.go:253: # 20: QQmlComponentPrivate::beginCreate() - 0x00007FF8EBE5E0F0
agent:2020/05/25 11:10:44 build.go:253: # 21: QQmlComponent::beginCreate() - 0x00007FF8EBE5E0B0
agent:2020/05/25 11:10:44 build.go:253: # 22: QQmlComponent::create() - 0x00007FF8EBE5F1C0
agent:2020/05/25 11:10:44 build.go:253: # 23: Unable to obtain symbol
agent:2020/05/25 11:10:44 build.go:253: # 24: Unable to obtain symbol
agent:2020/05/25 11:10:44 build.go:253: # 25: QMetaMethod::invoke() - 0x00007FF8EB06B630
agent:2020/05/25 11:10:44 build.go:253: # 26: QTest::ignoreMessage() - 0x00007FF9040052A0
agent:2020/05/25 11:10:44 build.go:253: # 27: QTest::ignoreMessage() - 0x00007FF9040052A0
agent:2020/05/25 11:10:44 build.go:253: # 28: QTest::ignoreMessage() - 0x00007FF9040052A0
agent:2020/05/25 11:10:44 build.go:253: # 29: QTest::qRun() - 0x00007FF9040093E0
agent:2020/05/25 11:10:44 build.go:253: # 30: QTest::qExec() - 0x00007FF904007470
agent:2020/05/25 11:10:44 build.go:253: # 31: Unable to obtain symbol
agent:2020/05/25 11:10:44 build.go:253: # 32: Unable to obtain symbol
agent:2020/05/25 11:10:44 build.go:253: # 33: BaseThreadInitThunk() - 0x00007FF912487BC0
agent:2020/05/25 11:10:44 build.go:253: # 34: RtlUserThreadStart() - 0x00007FF91324CEB0
agent:2020/05/25 11:10:44 build.go:253: jom: C:\Users\qt\work\qt\qtdeclarative\tests\auto\qml\qqmlproperty\Makefile.Release [check] Error 2
agent:2020/05/25 11:10:44 build.go:253: jom: C:\Users\qt\work\qt\qtdeclarative\tests\auto\qml\qqmlproperty\Makefile [release-check] Error 2
agent:2020/05/25 11:10:44 build.go:304: Process finished with error: exit status 2
Attachments
Issue Links
- duplicates
-
QTBUG-88299 tst_qqmlproperty crash in qtdeclarative with MSVC developer build
-
- Closed
-
- is duplicated by
-
QTBUG-88330 tst_qqmlproperty crash with Windows 10 developer build
-
- Closed
-
- relates to
-
QTBUG-82945 Reg->Qt 6/963c47aece12a0025707c76f6f8cb3de306752b8/MSVC2019/Windows: Crashes in property system
-
- Reported
-
- mentioned in
-
Page Loading...